# oricli-alpha

./: .blaze_info  .dockerignore  .env  .geminiignore  .gitattributes  .gitignore  .mcp.json  =0.1.7  =0.16.0  =0.4.20  =0.7.1  AGENTS.md  AGENT_ONBOARDING.md  CLAUDE.md  Dockerfile  GEMINI.md  INSTALL.md  MANIFEST.in  MODULES.md  PRD.md  QUICKSTART 2.md  QUICKSTART.md  README 2.md  README.md  README_DESIGN_PARTNERS.md  README_INSTALL.md  RELEASE_NOTES.md  benchmark_ori.py  constitution.example.ori  debug_import 2.py  entrypoint.sh  get_pods.py  go.mod  go.sum  mavaia-api.service  mavaia-trainer.service  mona_lisa_query_results.md  nohup.out  ori-dev-ui.service  oricli-api.service  (+46 more)
.cursor/plans/: add_huggingface_transformers_support_b5e5d924.plan.md  arc_induction_transduction_ensemble.plan.md  arc_reasoning_system_c84e6921.plan.md  brain_system_expansion_plan_afd6cf02.plan.md  cognitive-exec-upgrade_612a63b3.plan.md  flask-chat-ui_829891ef.plan.md  (+24 more)
.github/: copilot-instructions.md
arc_models/: induction_lora_config.json
browserd/: package.json
conductor/: affective_anchoring_plan.md  autonomic_self_mod_plan.md  curiosity_daemon_plan.md  docker_cleanup_cron.md  fs_indexer_plan.md  golang_migration_plan.md  hybrid_data_strategy_20260314.md  index.md  mcp_integration_plan.md  ollama_pivot.md  oricli_live_canvas_plan.md  oricli_ui_portal_plan.md  plan.md  product-guidelines.md  product.md  sovereign_cai_plan.md  sovereign_cron_plan.md  sovereign_profiles_plan.md  tech-stack.md  tracks.md  vdi_integration_plan.md  visual_vdi_plan.md  voice_synthesis_plan.md  websocket_integration_plan.md  workflow.md
config/: products.json  sot_axolotl.yaml
dev-portal/: agent.json  capabilities.json  handoff.json  index.html  install-guides.json  llms.txt  mcp-config.example.json  mcp-quickstart.html  mcp-remote-configs.html  openapi.json  requests.json  tools.json
docs/: AGENTS_API.md  AGENT_API.md  AGENT_KNOWLEDGE_LAYER.md  AGENT_ONBOARDING.md  AGLI_Phase_II.md  AGLI_VISION.md  API.md  API_INTEGRATION.md  BENCHMARK_RESULTS.md  CALI.md  CHANGELOG.md  DAEMONS.md  EDGE_SURFACES.md  EPISTEMIC_HYGIENE.md  EXTERNAL_AGENT_INTEGRATION.md  EXTERNAL_INTEGRATION.md  GHOST_CLUSTER.md  GOSH.md  GO_MIGRATION_PROGRESS.md  HIVE_OS_KERNEL_HANDBOOK.md  INFRASTRUCTURE_CONSTITUTION.md  INGESTION_API.md  IP_BOUNDARY.md  MCTS_REASONING.md  MEMORY_ARCHITECTURE.md  ORI_DEV_DEPLOY.md  ORI_HOME_SPEC.md  ORI_MCP_IDE_LANES.md  ORI_PROFILE_AND_SKILL_CURATION.md  ORI_STUDIO_OVERVIEW.md  ORI_STUDIO_PRODUCT_VISION.md  ORI_SYNTAX.md  POCKETBASE_MEMORY.md  PRODUCTS.md  README.md  REASONING.md  REFORM_PROPOSAL.md  REFORM_PROPOSAL_20260307_220511.md  RFAL.md  ROSETTA.md  (+26 more)
mavaia_core/: __init__.py  client.py  exceptions.py  system_identifier.py
models/: Modelfile.ori-1.7b  Modelfile.ori-16b  Modelfile.ori-4b
oricli_core/: __init__.py  client.py  exceptions.py  mcp_config.json  pb_ins.md  system_identifier.py
oricli_ui/: pubspec.yaml
plans/: python_llm_complete_summary 2.md  python_llm_complete_summary.md  python_llm_implementation_status 2.md  python_llm_next_steps_summary 2.md  python_llm_next_steps_summary.md  python_llm_phase1_complete 2.md  python_llm_phase1_complete.md  python_llm_phase2_complete.md  python_llm_phase3_complete 2.md  python_llm_phase4_complete.md  python_llm_phase4_enhancement_plan 2.md  python_llm_phase4_enhancement_plan.md  python_llm_phase4_implementation_status 2.md  python_llm_phase4_implementation_status.md  python_llm_phase4_milestone_complete 2.md  python_llm_phase4_milestone_complete.md  python_llm_phase4_phase3_complete 2.md  python_llm_phase4_phase4_complete 2.md  python_llm_phase4_phase5_complete.md  python_llm_phase4_phase6_complete 2.md  python_llm_phase4_phase6_complete.md  python_llm_phase4_progress_summary.md  python_llm_phase4_progress_update 2.md  python_llm_phase4_progress_update.md  python_llm_transformation_plan 2.md  python_llm_transformation_plan.md  python_llm_transformation_summary 2.md  python_llm_transformation_summary.md
protos/: oricli_rpc.proto
scripts/: README 2.md  README.md  add_goal.py  bench_routing.go  benchmark_diagnostic.py  build_engine.sh  build_ori_models.sh  check_dependencies 2.py  diagnose_venv.py  execute_local_goal.py  execute_sovereign_goal.py  fix_dm_tree.sh  fix_venv.sh  forensic_benchmark.py  install_cmake3.sh  install_distrax_only.sh  install_dm_tree_fixed.sh  install_jax.sh  install_with_cmake_fix.sh  introspect_runpod_schema.py  launch_distributed_train.py  log_watchdog.sh  mavaia_api_daemon.py  mavaia_dream_daemon.py  mavaia_goal_daemon.py  mavaia_introspect.py  mavaia_jit_daemon.py  mavaia_metacognition_daemon.py  mavaia_stats.py  mavaia_tool_daemon.py  mavaia_trainer_daemon.py  model_shootout.py  module_health_diagnostics.py  ori_substrate_integrity_bench.py  oricli_api_daemon.py  oricli_curiosity_daemon.py  oricli_dream_daemon.py  oricli_goal_daemon.py  oricli_introspect.py  oricli_jit_daemon.py  (+79 more)
tests/: test_adapter_router_accuracy.py  test_adapter_router_discovery.py  test_adapter_router_loading.py  test_adapter_router_module.py  test_adapter_router_refined.py  test_adapter_router_training.py  test_agent_profiles.py  test_benchmark_harness.py  test_bridge_benchmark.py  test_cognitive_chain_sync.py  test_compliance_auditor_smoke.py  test_curriculum_discovery.py  test_curriculum_electives.py  test_curriculum_knowledge.py  test_dataset_search.py  test_game_theory_solver.py  test_instruction_reform_integration.py  test_livebench_parser.py  test_module_health_diagnostics.py  test_ollama_provider.py  test_rfal_conflict_logic.py  test_rfal_loop_integration.py  test_rfal_reward_accuracy.py  test_rfal_training_sync.py  test_runpod_cluster_api.py  test_runpod_cluster_orchestration.py  test_smart_resume.py  test_stage9_foundation.py  test_swarm_collaboration.py  verify_curriculum_loop_smart.py  verify_elective_artifacts.py  verify_smart_resume_logic.py
ui_sovereignclaw/: index.html  package-lock.json  package.json
ui_static/: app 2.js  embeddings 2.js  index 2.html  index.html  modules 2.js  modules.js  styles 2.css  utils 2.js  utils.js
(+2221 files in other folders)
