[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavaia-core"
version = "1.0.0"
description = "Mavaia Core - Modular AI Core Package with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thynaptic Research", email = "ai@thynaptic.com"}
]
keywords = ["ai", "llm", "cognitive", "openai", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "flask>=3.0.0",
    "httpx>=0.24.0",
    "docker>=6.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "duckduckgo-search>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
ml = [
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.7.0",
    "optax>=0.1.7",
    "distrax>=0.4.0",
]

[project.scripts]
mavaia-server = "mavaia_core.api.server:main"

[project.urls]
Homepage = "https://github.com/thynaptic/mavaia-core"
Documentation = "https://github.com/thynaptic/mavaia-core/docs"
Repository = "https://github.com/thynaptic/mavaia-core"

[tool.setuptools]
packages = ["mavaia_core", "mavaia_core.api", "mavaia_core.brain", "mavaia_core.services", "mavaia_core.types"]

[tool.setuptools.package-data]
"mavaia_core" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

