[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavaia-core"
version = "1.0.0"
description = "Mavaia Core - Modular AI Core Package with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thynaptic Research", email = "ai@thynaptic.com"}
]
keywords = ["ai", "llm", "cognitive", "openai", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    # Keep the default install lightweight and avoid compiled extras
    # (e.g. uvloop/httptools) that can trigger long builds on some platforms.
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    # Used by MemoryBridgeService tests / local development
    "cryptography>=41.0.0",
    "lmdb>=1.4.1",
]
sandbox = [
    "docker>=6.0.0",
]
memory = [
    "cryptography>=41.0.0",
    "lmdb>=1.4.1",
]
data = [
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
]
train_neural = [
    # Training dependencies for NeuralTextGenerator (TF/Keras + data sources)
    "numpy>=1.23.0",
    "rich>=13.7.1",
    "tensorflow>=2.13.0",
    "wikipedia>=1.4.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.16.0",
    "internetarchive>=3.5.0",
]
ml = [
    # ML stack (kept optional to avoid heavyweight/compiled deps for base installs)
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.7.0",
    "optax>=0.1.7",
    "distrax>=0.1.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
]

[project.scripts]
mavaia-server = "mavaia_core.api.server:main"
mavaia-curriculum-test = "mavaia_core.evaluation.curriculum.cli:main"
mavaia-distill = "mavaia_core.cli.distill:main"

[project.urls]
Homepage = "https://github.com/thynaptic/mavaia-core"
Documentation = "https://github.com/thynaptic/mavaia-core/docs"
Repository = "https://github.com/thynaptic/mavaia-core"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mavaia_core*"]
exclude = ["models*", "LiveBench*", "build*", "dist*", "tests*", ".venv*", ".cursor*"]

[tool.setuptools.package-data]
"mavaia_core" = ["py.typed", "**/*.json", "**/*.db"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"
